--- a/src/main-css/css/app.css
+++ b/src/main-css/css/app.css
@@ -367,3 +367,34 @@ h3 {
 .bg-primary {
   background-color: #E8505B;
 }
+
+.header {
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 5rem 0;
+  position: relative;
+}
+
+.header .container-header {
+  position: relative;
+}
+
+.header:before {
+  background-color: #000;
+  bottom: 0;
+  content: "";
+  left: 0;
+  opacity: 0.6;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.header__bar {
+  display: flex;
+  flex-direction: column;
+}
+
+.header_inicio {
+  background-image: url(../../assets/img/header_inicio.jpg);
+}
